--- a/_posts/0000-01-02-YehudaKl.md
+++ b/_posts/0000-01-02-YehudaKl.md
@@ -2,6 +2,5 @@
 layout: slide
 title: "Welcome to our second slide!"
 ---
-Your text
+Your text: You asked me to change something in here so... here it is!
 Use the left arrow to go back!
-
